--- a/projeto_2/src/index.html
+++ b/projeto_2/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Questpedia ✰</title>
+  <title>Quest'pedia ✰</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png">
